@@ -4,7 +4,7 @@
       <setting label="30001" type="text"   id="sabnzbd_server" default="0.0.0.0:8085" />
    </category>
    <category   label="30002">
-      <setting label="30003" type="slider" id="sa_nice"        default="0" range="0,1,19" option="int" />
+      <setting label="30003" type="slider" id="sa_nice"        default="10" range="0,1,19" option="int" />
    </category>
 </settings>
 
